--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+server.port=9091
 spring.application.name=Spring Boot Web Tutorial
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:file:/Users/anuj/Documents/springBootWebTutorial/db
-spring.datasource.username=anujDB
-spring.datasource.password=Anuj123
+#spring.datasource.url=jdbc:h2:file:/Users/anuj/Documents/springBootWebTutorial/db
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=12345678
 spring.jpa.hibernate.ddl-auto=update
